[gd_scene load_steps=7 format=3 uid="uid://c548s6pec6a87"]

[ext_resource type="Script" path="res://Missions/mission_1/mission1_activity/questions.gd" id="1_fc4m7"]
[ext_resource type="Texture2D" uid="uid://d0ktmikbprtx7" path="res://Images/scale_button.png" id="2_g37lk"]
[ext_resource type="Texture2D" uid="uid://bsx604ee36ual" path="res://Images/scale.png" id="2_pjfem"]
[ext_resource type="Texture2D" uid="uid://b1iov6mmay580" path="res://Images/cityscape.png" id="2_xavxh"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lkuxy"]
texture = ExtResource("2_pjfem")
texture_margin_left = 15.0
texture_margin_top = 15.0
texture_margin_right = 15.0
texture_margin_bottom = 15.0

[sub_resource type="Theme" id="Theme_k8xge"]
HSlider/styles/slider = SubResource("StyleBoxTexture_lkuxy")

[node name="questions" type="Node2D"]
script = ExtResource("1_fc4m7")

[node name="backgroundCity" type="Sprite2D" parent="."]
position = Vector2(289, 510)
texture = ExtResource("2_xavxh")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 576.0
offset_bottom = 1024.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 75

[node name="timer" type="Panel" parent="VBoxContainer"]
layout_mode = 2

[node name="mins" type="Label" parent="VBoxContainer/timer"]
layout_mode = 0
offset_left = 13.0
offset_top = 8.0
offset_right = 55.0
offset_bottom = 48.0
theme_override_font_sizes/font_size = 30
text = "00:"
horizontal_alignment = 2
vertical_alignment = 1

[node name="secs" type="Label" parent="VBoxContainer/timer"]
layout_mode = 0
offset_left = 60.0
offset_top = 8.0
offset_right = 102.0
offset_bottom = 48.0
theme_override_font_sizes/font_size = 30
text = "00."
horizontal_alignment = 2
vertical_alignment = 1

[node name="msec" type="Label" parent="VBoxContainer/timer"]
layout_mode = 0
offset_left = 98.0
offset_top = 8.0
offset_right = 140.0
offset_bottom = 48.0
theme_override_font_sizes/font_size = 30
text = "00"
horizontal_alignment = 2
vertical_alignment = 1

[node name="question" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 250)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Question"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="actualPercentage" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Actual percentage"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="description" type="Label" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Description"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="PercentVBox" type="VBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="percentage_scale" type="HSlider" parent="VBoxContainer/PercentVBox"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = SubResource("Theme_k8xge")
theme_override_icons/grabber = ExtResource("2_g37lk")
theme_override_icons/grabber_highlight = ExtResource("2_g37lk")

[node name="percent" type="Label" parent="VBoxContainer/PercentVBox"]
layout_mode = 2
text = "Percent"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_constants/separation = 225

[node name="showResult" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Show percent!"

[node name="nextBtn" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Next"

[connection signal="drag_ended" from="VBoxContainer/PercentVBox/percentage_scale" to="." method="_on_percentage_scale_drag_ended"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/showResult" to="." method="_on_show_result_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/nextBtn" to="." method="_on_next_btn_pressed"]
